--- a/app/webapp/templates/register.html
+++ b/app/webapp/templates/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main class="container form-signin text-center">
     <form action="{{ url_for('register_user') }}" method="post">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 fw-normal">Please register</h1>
     
         <div class="form-floating">
         <input type="text" class="form-control" id="username" placeholder="Username" name="username">
@@ -13,7 +13,7 @@
         <input type="password" class="form-control" id="password" placeholder="Password" name="password">
         <label for="passwrd">Password</label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
     </form>
 
 </main>
