Fixed Helm Chart

--- a/app/webapp/templates/base.html
+++ b/app/webapp/templates/base.html
@@ -78,6 +78,7 @@
             <a class="btn btn-sm btn-outline-secondary" href="{{ url_for('logout') }}">Logout</a>
             {% else %}
             <a class="btn btn-sm btn-outline-secondary" href="{{ url_for('login') }}">Login</a>
+            <a class="btn btn-sm btn-outline-secondary" href="{{ url_for('register_user') }}">Register</a>
             {% endif %}
           </div>
         </div>
